update tasks report: views optimized, template adjustments, dates fixed

--- a/iaroapp/static/css/styles.css
+++ b/iaroapp/static/css/styles.css
@@ -50,6 +50,7 @@ body.dark-page .navbar-brand-img {
 }
 
 :root {
+  --table-border-color: rgba(131, 146, 171, 0.2);
   --bs-blue: #63B3ED;
   --bs-indigo: #596CFF;
   --bs-purple: #6f42c1;
