--- a/interactions/templates/upload_pdf.html
+++ b/interactions/templates/upload_pdf.html
@@ -4,6 +4,7 @@
 {% block extra_head %}
     <title>iaroapp - Upload PDF</title>
     {{ form.media }}
+    <link rel="stylesheet" href="{% static 'css/loader_animation.css' %}">
 {% endblock %}
 
 {% block widgets %}
@@ -20,8 +21,15 @@
                 <h6>Upload a PDF</h6>
             </div>
             <div class="card-body p-3">
-                <form method="post" enctype="multipart/form-data">
+                <form id="uploadForm" enctype="multipart/form-data" method="post">
                     {% csrf_token %}
+
+                    {% if form.non_field_errors %}
+                        <div class="alert alert-danger">
+                            {{ form.non_field_errors }}
+                        </div>
+                    {% endif %}
+
                     <div class="mb-3">
                         <label for="id_category" class="form-label">Category:</label>
                         <select id="id_category" name="category" onchange="toggleNewCategoryInput()" class="form-select">
@@ -31,26 +39,63 @@
                             {% endfor %}
                             <option value="new">Create new category</option>
                         </select>
+                        {% if form.category.errors %}
+                            <div class="alert alert-danger">
+                                {{ form.category.errors }}
+                            </div>
+                        {% endif %}
                     </div>
                     <div class="mb-3" id="new_category_div" style="display: none;">
                         <label for="id_new_category" class="form-label">New Category:</label>
                         {{ form.new_category }}
+                        {% if form.new_category.errors %}
+                            <div class="alert alert-danger">
+                                {{ form.new_category.errors }}
+                            </div>
+                        {% endif %}
                     </div>
                     <div class="mb-3">
                         <label for="id_name" class="form-label">Name:</label>
                         {{ form.name }}
+                        {% if form.name.errors %}
+                            <div class="alert alert-danger">
+                                {{ form.name.errors }}
+                            </div>
+                        {% endif %}
                     </div>
                     <div class="mb-3">
                         <label for="id_description" class="form-label">Description:</label>
                         {{ form.description }}
+                        {% if form.description.errors %}
+                            <div class="alert alert-danger">
+                                {{ form.description.errors }}
+                            </div>
+                        {% endif %}
                     </div>
                     <div class="mb-3">
                         <label for="id_file" class="form-label">PDF file:</label>
                         <br>
                         {{ form.file }}
+                        {% if form.file.errors %}
+                            <div class="alert alert-danger">
+                                {{ form.file.errors }}
+                            </div>
+                        {% endif %}
                     </div>
                     <button type="submit" class="w-100 btn bg-gradient-primary">Upload</button>
                 </form>
+                <div id="PDFLoader" class="loading-card-overlay">
+                    <div class="spinner"></div>
+                    <div class="loading-progress">
+                        <div class="progress-bar" id="progressBar"></div>
+                        <div class="estimated-time" id="estimatedTime">0%</div>
+                        <div id="conversionText" style="display: none;" class="converting-message">
+                            Converting PDF, please wait...
+                            <div id="fileSize">File size: </div>
+                            <div id="estimatedConversionTime">Converted page 0/0</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -66,17 +111,233 @@ function toggleNewCategoryInput() {
         newCategoryDiv.style.display = 'none';
     }
 }
+
+document.addEventListener('DOMContentLoaded', function () {
+    document.getElementById('uploadForm').addEventListener('submit', function(event) {
+        event.preventDefault();
+        const form = document.getElementById('uploadForm');
+        const formData = new FormData(form);
+
+        const xhr = new XMLHttpRequest();
+        xhr.open('POST', '', true);
+        xhr.setRequestHeader('X-Requested-With', 'XMLHttpRequest');
+
+        xhr.upload.addEventListener('progress', function(e) {
+            if (e.lengthComputable) {
+                const percentComplete = (e.loaded / e.total) * 100;
+                document.getElementById('progressBar').style.width = percentComplete + '%';
+                document.getElementById('estimatedTime').innerText = Math.round(percentComplete) + '%';
+                console.log(`Uploaded ${e.loaded} of ${e.total} bytes (${percentComplete.toFixed(2)}%)`);
+                if (percentComplete === 100) {
+                    showConversionMessage();
+                    fetchConversionDetails(formData);
+                }
+            } else {
+                console.log('Unable to compute progress information since the total size is unknown');
+            }
+        });
+
+        xhr.onloadstart = function() {
+            console.log('Upload started');
+            showCardLoading();
+        };
+
+        xhr.onloadend = function() {
+            console.log('Upload completed');
+            hideLoading();
+        };
+
+        xhr.onload = function() {
+            if (xhr.status === 200) {
+                const response = JSON.parse(xhr.responseText);
+                if (response.success) {
+                    startConversionStatusUpdates();
+                    window.location.href = response.redirect_url;
+                } else {
+                    displayFormErrors(response.errors);
+                }
+            } else {
+                console.log(`Upload failed: ${xhr.statusText}`);
+                alert('An error occurred!');
+            }
+        };
+
+        xhr.onerror = function() {
+            console.log('Upload error occurred');
+            alert('An error occurred!');
+        };
+
+        xhr.onabort = function() {
+            console.log('Upload aborted');
+            hideLoading();
+        };
+
+        xhr.send(formData);
+    });
+
+    function displayFormErrors(errors) {
+        const form = document.getElementById('uploadForm');
+        const errorDivs = form.querySelectorAll('.alert.alert-danger');
+        errorDivs.forEach(div => div.remove());
+
+        for (const [field, errorData] of Object.entries(errors)) {
+            const errorDiv = document.createElement('div');
+            errorDiv.className = 'alert alert-danger mt-2';
+            errorDiv.innerHTML = errorData.map(error => error.message).join('<br>');
+
+            if (field === '__all__') {
+                form.prepend(errorDiv);
+            } else {
+                const fieldElement = document.getElementById(`id_${field}`);
+                if (fieldElement) {
+                    fieldElement.parentElement.appendChild(errorDiv);
+                }
+            }
+        }
+    }
+
+    function fetchConversionDetails(formData) {
+        fetch('/notes/conversion_details/', {
+            method: 'POST',
+            body: formData
+        })
+        .then(response => response.json())
+        .then(data => {
+            document.getElementById('fileSize').innerText = `File size: ${data.file_size} MB`;
+            document.getElementById('estimatedConversionTime').innerText = `Converted page 0/${data.total_pages}`;
+            startConversionStatusUpdates();
+        })
+        .catch(error => console.error('Error fetching conversion details:', error));
+    }
+
+    function startConversionStatusUpdates() {
+        updateConversionStatus();
+        conversionStatusInterval = setInterval(updateConversionStatus, 2000);  // Update every 2 seconds
+    }
+
+    function stopConversionStatusUpdates() {
+        clearInterval(conversionStatusInterval);
+    }
+
+    function updateConversionStatus() {
+        fetch('/notes/conversion_status/', {
+            method: 'GET'
+        })
+        .then(response => response.json())
+        .then(data => {
+            document.getElementById('estimatedConversionTime').innerText = `Converted page ${data.current_page}/${data.total_pages}`;
+        })
+        .catch(error => console.error('Error fetching conversion status:', error));
+    }
+
+    function showCardLoading() {
+        const overlay = document.getElementById('PDFLoader');
+        overlay.classList.add('active');
+        document.body.style.overflow = 'hidden';
+    }
+
+    function hideLoading() {
+        const overlay = document.getElementById('PDFLoader');
+        overlay.classList.remove('active');
+        document.body.style.overflow = 'auto';
+    }
+
+    function showConversionMessage() {
+        document.getElementById('progressBar').style.display = 'none';
+        document.getElementById('estimatedTime').style.display = 'none';
+        document.getElementById('conversionText').style.display = 'block';
+    }
+
+    window.addEventListener("load", function () {
+        hideLoading();
+    });
+
+    window.addEventListener("pageshow", function (event) {
+        if (event.persisted) {
+            hideLoading();
+        }
+    });
+});
 </script>
+
 
 <style>
     input {
         width: 100%;
     }
+
     body.dark-page select {
         background-color: #323b55 !important;
     }
+
     .ck-editor-container {
         color: black;
+    }
+
+    .loading-card-overlay {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
+        z-index: 10;
+        border-radius: 1rem;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease, visibility 0.3s ease;
+        flex-direction: column;
+    }
+
+    .loading-card-overlay.active {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .spinner {
+        border: 4px solid rgba(0, 0, 0, 0.1);
+        border-top: 4px solid #007bff;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        animation: spin 2s linear infinite;
+    }
+
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+        }
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+
+    .loading-progress {
+        width: 80%;
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    .progress-bar {
+        width: 0;
+        height: 10px;
+        background-color: #007bff;
+        border-radius: 5px;
+        transition: width 0.4s ease;
+    }
+
+    .estimated-time,
+    .converting-message {
+        margin-top: 5px;
+        font-size: 0.9rem;
+        color: #000000;
+    }
+    .errorlist {
+        margin-bottom: 0 !important;
     }
 </style>
 {% endblock %}
