--- a/interactions/templates/view_slides.html
+++ b/interactions/templates/view_slides.html
@@ -3,115 +3,210 @@
 
 {% block extra_head %}
     <title>iaroapp - View Slides</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.5.2/dist/css/glide.core.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.5.2/dist/css/glide.theme.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.5.2/dist/css/glide.core.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.5.2/dist/css/glide.theme.min.css"/>
     <link rel="stylesheet" href="{% static 'css/view_slides.css' %}" type="text/css">
     <style>
-        .glide__slide img {
-            width: 100%;
-            height: auto;
-            object-fit: contain;
-        }
+    .row {
+        display: flex;
+        flex-direction: column;
+        max-height: calc(100vh - 12rem);
+    }
 
-        .glide__arrows {
-            display: flex;
-            justify-content: space-between;
-            position: absolute;
-            top: 50%;
-            width: 100%;
-            transform: translateY(-50%);
-            z-index: 2;
-        }
+    .col-lg-12 {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        max-height: calc(100vh - 11.4rem);
+    }
 
+    .slider__card {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        max-height: calc(100vh - 4rem);
+        overflow: hidden;
+    }
+
+    .card-body {
+        flex: 1;
+        overflow-y: auto;
+    }
+
+    .glide__slide {
+        display: flex;
+        justify-content: center;
+    }
+
+    .glide__slide img {
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: contain;
+    }
+
+    .fullscreen-modal .glide__slide img {
+        height: 100vh;
+    }
+
+    .glide__arrows {
+        display: flex;
+        justify-content: space-between;
+        position: absolute;
+        top: 50%;
+        width: 100%;
+        transform: translateY(-50%);
+        z-index: 2;
+    }
+
+    .glide__arrow {
+        background: rgba(0, 123, 255, 0.25);
+        border: none;
+        color: rgba(255, 255, 255, 0.5);
+        cursor: pointer;
+        border-radius: 50%;
+        transition: background 0.3s, transform 0.3s;
+        font-size: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 20px;
+    }
+
+    .glide__arrow:hover {
+        background: rgba(0, 86, 179, 0.75);
+    }
+
+    .glide__arrow--left::before {
+        content: '◀';
+    }
+
+    .glide__arrow--right::before {
+        content: '▶';
+    }
+
+    @media (max-width: 1200px) {
         .glide__arrow {
-            background: rgba(0, 123, 255, 0.25);
-            border: none;
-            color: rgba(255, 255, 255, 0.5);
-            cursor: pointer;
-            border-radius: 50%;
-            transition: background 0.3s, transform 0.3s;
-            font-size: 24px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
+            font-size: 20px;
+            padding: 15px;
         }
+    }
 
-        .glide__arrow:hover {
-            background: rgba(0, 86, 179, 0.75);
+    @media (max-width: 800px) {
+        .glide__arrow {
+            font-size: 18px;
+            padding: 12px;
         }
+    }
 
-        .glide__arrow--left::before {
-            content: '◀';
+    @media (max-width: 480px) {
+        .glide__arrow {
+            font-size: 16px;
+            padding: 10px;
         }
+    }
 
-        .glide__arrow--right::before {
-            content: '▶';
-        }
+    .glide__bullets {
+        display: flex;
+        justify-content: center;
+        position: absolute;
+        bottom: 10px;
+        width: 100%;
+    }
 
-        @media (max-width: 1200px) {
-            .glide__arrow {
-                font-size: 20px;
-                padding: 15px;
-            }
-        }
+    .glide__bullet {
+        background: rgba(0, 123, 255, 0.75);
+        border: none;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        margin: 0 5px;
+        cursor: pointer;
+        transition: background 0.3s;
+    }
 
-        @media (max-width: 800px) {
-            .glide__arrow {
-                font-size: 18px;
-                padding: 12px;
-            }
-        }
+    .glide__bullet:hover,
+    .glide__bullet--active {
+        background: rgba(0, 86, 179, 0.8);
+    }
 
-        @media (max-width: 480px) {
-            .glide__arrow {
-                font-size: 16px;
-                padding: 10px;
-            }
-        }
+    .fullscreen-modal {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.8);
+        z-index: 9999;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        overflow: hidden;
+    }
 
-        .glide__bullets {
-            display: flex;
-            justify-content: center;
-            position: absolute;
-            bottom: 10px;
-            width: 100%;
-        }
+    .modal-content {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        background: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+    }
 
-        .glide__bullet {
-            background: rgba(0, 123, 255, 0.75);
-            border: none;
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            margin: 0 5px;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
+    .modal-content .glide {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-        .glide__bullet:hover,
-        .glide__bullet--active {
-            background: rgba(0, 86, 179, 0.8);
-        }
+    .modal-content .glide__slide {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    }
 
-        .loading-indicator {
-            display: none;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 2rem;
-            color: #007bff;
-        }
+    .glide__slides {
+        align-items: center;
+    }
 
-        .loading {
-            display: block;
-        }
-    </style>
+    .exit__btn {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        border-radius: 5px;
+        background-color: rgba(0, 0, 0, 0.7);
+        background-image: none !important;
+        color: white;
+        z-index: 3;
+        padding: 10px 20px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+
+    .exit__btn:hover {
+        background-color: rgba(0, 86, 179, 0.8) !important;
+    }
+    .glide__arrow--right {
+        right: 0.8em !important;
+    }
+    .glide__arrow--left {
+        left: 0.8em !important;
+    }
+</style>
+
+
 {% endblock %}
 
 {% block widgets %}
 <div class="d-flex justify-content-between flex-wrap gap-2 mb-0">
+    <button id="fullscreen-btn" class="btn bg-gradient-primary mb-0">Enter Fullscreen</button>
     <a href="{% url 'view_slides_list' %}" class="btn bg-gradient-primary mb-0">View PDFs</a>
 </div>
 {% endblock widgets %}
@@ -119,13 +214,12 @@
 {% block content %}
 <div class="row">
     <div class="col-lg-12 mb-4">
-        <div class="card h-100">
+        <div class="card slider__card h-100">
             <div class="card-header pb-0">
                 <h6>{{ pdf.name }}</h6>
             </div>
             <div class="card-body p-3">
                 <div class="glide" id="glide">
-                    <div class="loading-indicator" id="loading-indicator">Loading...</div>
                     <div class="glide__track" data-glide-el="track">
                         <ul class="glide__slides">
                             {% for image in pdf_images %}
@@ -150,16 +244,40 @@
     </div>
 </div>
 
+<div id="fullscreen-modal" class="fullscreen-modal">
+    <div class="modal-content">
+        <button id="exit-fullscreen-btn" class="btn d-flex justify-content-center align-items-center bg-gradient-primary exit__btn mb-0" style="width: 40px; height: 40px; border-radius: 50% !important;"><b>X</b></button>
+        <div class="glide" id="glide-fullscreen">
+            <div class="glide__track" data-glide-el="track">
+                <ul class="glide__slides">
+                    {% for image in pdf_images %}
+                    <li class="glide__slide">
+                        <img src="{{ image.image.url }}" loading="lazy" alt="PDF Page {{ image.page_number }}">
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <div class="glide__arrows" data-glide-el="controls">
+                <button class="glide__arrow glide__arrow--left" data-glide-dir="<" aria-label="Previous slide"></button>
+                <button class="glide__arrow glide__arrow--right" data-glide-dir=">" aria-label="Next slide"></button>
+            </div>
+            <div class="glide__bullets" data-glide-el="controls[nav]">
+                {% for image in pdf_images %}
+                <button class="glide__bullet" data-glide-dir="={{ forloop.counter0 }}" aria-label="Go to slide {{ forloop.counter }}"></button>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.5.2/dist/glide.min.js"></script>
 <script>
 document.addEventListener('DOMContentLoaded', function() {
-    // Override the position of the specific navbar
     const specificNavbar = document.getElementById('navbarBlur');
     if (specificNavbar) {
         specificNavbar.classList.remove('position-sticky');
         specificNavbar.style.position = 'relative';
 
-        // Use MutationObserver to ensure the position remains relative
         const observer = new MutationObserver(() => {
             if (specificNavbar.classList.contains('position-sticky') || specificNavbar.style.position !== 'relative') {
                 specificNavbar.classList.remove('position-sticky');
@@ -167,7 +285,6 @@ document.addEventListener('DOMContentLoaded', function() {
             }
         });
 
-        // Observe changes to the class attribute and style attribute of the navbar
         observer.observe(specificNavbar, {
             attributes: true,
             attributeFilter: ['class', 'style']
@@ -182,27 +299,49 @@ document.addEventListener('DOMContentLoaded', function() {
         autoplay: 0,
         hoverpause: true,
         breakpoints: {
-            1200: {
-                perView: 1
-            },
-            800: {
-                perView: 1
-            },
-            480: {
-                perView: 1
-            }
+            1200: { perView: 1 },
+            800: { perView: 1 },
+            480: { perView: 1 }
         }
     });
 
-    glide.on('mount.before', () => {
-        document.getElementById('loading-indicator').classList.add('loading');
-    });
-
-    glide.on('mount.after', () => {
-        document.getElementById('loading-indicator').classList.remove('loading');
-    });
-
     glide.mount();
+
+    let fullscreenGlide;
+
+    const fullscreenBtn = document.getElementById('fullscreen-btn');
+    const exitFullscreenBtn = document.getElementById('exit-fullscreen-btn');
+    const fullscreenModal = document.getElementById('fullscreen-modal');
+
+    fullscreenBtn.addEventListener('click', () => {
+        const currentSlideIndex = glide.index;
+        fullscreenModal.style.display = 'flex';
+        fullscreenBtn.style.display = 'none';
+
+        fullscreenGlide = new Glide('#glide-fullscreen', {
+            type: 'carousel',
+            startAt: currentSlideIndex,
+            perView: 1,
+            gap: 10,
+            autoplay: 0,
+            hoverpause: true,
+            breakpoints: {
+                1200: { perView: 1 },
+                800: { perView: 1 },
+                480: { perView: 1 }
+            }
+        });
+
+        fullscreenGlide.mount();
+    });
+
+    exitFullscreenBtn.addEventListener('click', () => {
+        const currentSlideIndex = fullscreenGlide.index;
+        fullscreenModal.style.display = 'none';
+        fullscreenBtn.style.display = 'inline-block';
+        fullscreenGlide.destroy();
+        glide.go('=' + currentSlideIndex);
+    });
 });
 </script>
 
